Fix height issues on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -517,7 +517,7 @@ button:hover::before {
     display: block;
 }
 #flip {
-    height: 40px;
+    height: 90px;
     overflow: hidden;
     margin-top: 10px;
 }
